added new features